<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Data Capture App</string>
    <string name="pref_config">pref_config</string>
    <string name="pref_category_session">Session Details</string>
    <string name="pref_category_sampling">Sensor Sampling</string>
    <string name="pref_category_bluetooth">Bluetooth</string>
    <string name="pref_category_remote">Remote Server</string>
    <string name="pref_user">pref_user</string>
    <string name="pref_user_title">User ID</string>
    <string name="pref_user_summary">Enter user identifier</string>
    <string name="pref_events_title">Events</string>
    <string name="pref_events_summary">Define sensor events for this session</string>
    <string name="pref_adv_sampling_title">Advanced</string>
    <string name="pref_adv_sampling_summary">Configure additional sensor sampling</string>
    <string name="pref_sampling_mag_title">Magnetometer</string>
    <string name="pref_sampling_mag_summary">Enable additional sampling of magnetometer data</string>
    <string name="pref_sampling_mag">sampling_mag</string>
    <string name="pref_sampling_gyro_title">Gyroscope</string>
    <string name="pref_sampling_gyro_summary">Enable additional sampling of gyroscope data</string>
    <string name="pref_sampling_gyro">sampling_gyro</string>
    <string name="pref_sampling_acc_title">Accelerometer</string>
    <string name="pref_sampling_acc_summary">Enable additional sampling of accelerometer data</string>
    <string name="pref_sampling_acc">sampling_acc</string>
    <string name="pref_remote_url">remote_url</string>
    <string name="pref_remote_url_title">Server URL</string>
    <string name="pref_remote_url_summary">Enter the URL of the remote server to push data to</string>
    <string name="pref_remote_packet_size">remote_packet_size</string>
    <string name="pref_remote_packet_size_title">Remote Data Submission</string>
    <string name="pref_remote_packet_size_summary">Select the size of the data submissions</string>
    <string name="pref_category_store">Cache Store</string>
    <string name="pref_store_title">Clear Cache</string>
    <string name="pref_store_clear_summary">Tap to delete old stored data</string>
    <string name="pref_store_clear">store_clear</string>
    <string name="activity_testing">Data Collection Testing</string>
    <string name="activity_master">Data Collection Master</string>
    <string name="activity_slave">Data Collection Client</string>
    <string name="pref_bluetooth">pref_bluetooth</string>
    <string name="action_bluetooth">Bluetooth Settings</string>
    <string name="action_configure">Configure</string>
    <string name="action_configure_advanced">Advanced Configuration</string>
    <string name="action_adv_configure">Advanced</string>
    <string name="action_basic_configure">Basic</string>
    <string name="notification_slave_intent_action">com.example.DataCaptureApp.OPEN_SLAVE</string>
    <string name="notification_master_intent_action">com.example.DataCaptureApp.OPEN_MASTER</string>
    <string name="pref_samplerate">pref_samplerate</string>
    <string name="pref_event_type">pref_event_type</string>
    <string name="pref_event_type_title">Event Threshold Type</string>
    <string name="pref_event_type_summary">Specify the threshold type for beeping on detected sensor angle</string>
    <string name="pref_event_angle">pref_event_angle</string>
    <string name="pref_event_angle_title">Event Threshold Value</string>
    <string name="pref_event_angle_summary">Specify the angle for beeping</string>
</resources>